deviseの導入及び基本設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,15 @@
   </head>
 
   <body>
+    <!-- フラッシュメッセージの表示 -->
+    <% flash.each do |key, message| %>
+      <div class="alert alert-<%= key %> mb-4">
+        <div>
+          <span><%= message %></span>
+        </div>
+      </div>
+    <% end %>
+    
     <%= render "shared/header" %> 
     <%= yield %>
     <%= render "shared/footer" %>
