投稿一覧ページの作成

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -6,7 +6,7 @@
       <p class="py-6 text-base lg:text-lg">
         ランニングで学んだことを共有しよう
       </p>
-      <button class="btn btn-primary">投稿をみる</button>
+      <%= link_to "投稿をみる", posts_path, class: "btn btn-primary" %>
     </div>
   </div>
 </div>
