Brakemanの警告対応とセキュリティ修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,13 +14,13 @@
     <%= link_to 'すべて', posts_path, class: "btn btn-outline #{'btn-active' if params[:category].blank? || params[:category] == 'All'} mr-2" %>
     <% @categories.each do |category| %>
       <%= link_to category, posts_path(category: category), class: "btn btn-outline #{'btn-active' if params[:category] == category} mr-2" %>
-    <% end %>
+    <% end %>    
   </div>
 
   <!-- 投稿一覧 -->
   <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <% if @posts.present? %>
-      <%= render @posts %>
+    <%= render partial: 'posts/post', collection: @posts, as: :post %>
     <% else %>
       <p class="text-center">投稿がありません。</p>
     <% end %>
