新規投稿フォームに画像アップロードフィールドを追加

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -53,7 +53,7 @@
 
 
   <div class="form-control">
-    <%= form.file_field :image, class: "file-input file-input-bordered w-full" %>
+    <%= form.file_field :post_image, class: "file-input file-input-bordered w-full" %>
   </div>
 
   <div class="form-control">
