--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,68 +1,1 @@
-<h1 class="text-3xl font-bold text-center mb-8">新規投稿</h1>
-
-<%= form_with model: @post, local: true, class: "space-y-6" do |form| %>
-
-  <div class="form-control">
-    <%= form.text_field :title, placeholder: "タイトルを入力してください", class: "input input-bordered w-full" %>
-  </div>
-
-
-  <div class="form-control">
-  <label class="label">カテゴリーを選択してください</label>
-  <div class="carousel carousel-center space-x-4 overflow-x-auto relative" data-turbo="false">
-    <div class="absolute inset-y-0 left-0 w-8 bg-gradient-to-r from-white pointer-events-none"></div>
-    <% Category.all.each do |category| %>
-      <div class="carousel-item">
-        <label class="cursor-pointer label">
-          <%= form.radio_button :category_id, category.id, class: "radio category-radio", data: { category_id: category.id } %>
-          <span class="ml-2 text-sm"><%= category.name %></span>
-        </label>
-      </div>
-    <% end %>
-    <div class="absolute inset-y-0 right-0 w-8 bg-gradient-to-l from-white pointer-events-none"></div>
-  </div>
-</div>
-
-<div class="form-control mt-4">
-  <label class="label">タグ（3つまで選択できます）</label>
-  <div class="carousel carousel-center space-x-4 overflow-x-auto relative">
-    <div class="absolute inset-y-0 left-0 w-8 bg-gradient-to-r from-white pointer-events-none"></div>
-    <% Tag.where(tag_type: :standard).each do |tag| %>
-      <span 
-        class="tag-button carousel-item px-3 py-1 bg-transparent text-gray-500 border border-gray-300 rounded-full cursor-pointer transition duration-200 ease-in-out"
-        data-tag-id="<%= tag.id %>">
-        #<%= tag.name %>
-      </span>
-    <% end %>
-    <div class="absolute inset-y-0 right-0 w-8 bg-gradient-to-l from-white pointer-events-none"></div>
-  </div>
-  <div id="selected-tags-container"></div>
-</div>
-
-<div class="form-control mt-4" id="category-specific-tags">
-  <div class="carousel carousel-center space-x-4 overflow-x-auto relative" id="category-tags-container">
-    <div class="absolute inset-y-0 left-0 w-8 bg-gradient-to-r from-white pointer-events-none"></div>
-    <div class="absolute inset-y-0 right-0 w-8 bg-gradient-to-l from-white pointer-events-none"></div>
-  </div>
-</div>
-
-
-  <div class="form-control">
-    <%= form.text_area :content, placeholder: "本文を入力してください", class: "textarea textarea-bordered w-full h-40" %>
-  </div>
-
-
-  <div class="form-control">
-    <%= form.file_field :post_image, class: "file-input file-input-bordered w-full" %>
-  </div>
-
-  <div class="form-control">
-    <%= form.label :reference_url, "関連URL (オプション)", class: "label" %>
-    <%= form.url_field :reference_url, placeholder: "http://example.com", class: "input input-bordered w-full" %>
-  </div>
-
-  <div class="form-control flex space-x-4">
-    <%= link_to "キャンセル", posts_path, class: "btn btn-secondary flex-1" %>
-    <%= form.submit "投稿する", class: "btn btn-primary flex-1" %>
-  </div>
-<% end %>
+<%= render 'form', form_title: '新規投稿', submit_button_text: '投稿する', cancel_path: posts_path %>
