--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-8 bg-base-100">
+<div class="container mx-auto px-4 py-2 bg-base-100 pb-20" style="padding-top: 70px;">
   <!-- 検索バー -->
   <div class="flex justify-center mb-4">
     <%= search_form_for @q, url: posts_path, method: :get, class: "w-full max-w-md flex items-center" do |f| %>
@@ -12,14 +12,14 @@
   </div>
 
   <!-- カテゴリーカルーセル -->
-  <div class="carousel space-x-4">
+  <div class="carousel space-x-1 px-4 overflow-x-auto no-scrollbar flex items-center justify-start">
     <!-- すべてボタン -->
     <div class="carousel-item">
       <%= link_to posts_path, class: "btn rounded-full px-4 #{params.dig(:q, :category_id_eq).blank? ? 'bg-primary text-base-100' : 'bg-secondary text-base-100'}" do %>
         すべて
       <% end %>
     </div>
-
+  
     <% @categories.each do |category| %>
       <div class="carousel-item">
         <%= link_to posts_path(q: { category_id_eq: category.id }), class: "btn rounded-full px-4 #{params.dig(:q, :category_id_eq).to_s == category.id.to_s ? 'bg-primary text-base-100' : 'bg-secondary text-base-100'}" do %>
@@ -28,9 +28,9 @@
       </div>
     <% end %>
   </div>
-</div>
+  
   <!-- 投稿一覧 -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 justify-items-center">
     <% if @posts.present? %>
       <%= render partial: 'posts/post', collection: @posts, as: :post %>
     <% else %>
@@ -39,4 +39,7 @@
   </div>
 </div>
 
-<%= paginate @posts %>
+<!-- ページネーション -->
+<div style="padding-bottom: 80px; text-align: center;">
+  <%= paginate @posts %>
+</div>
