--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-8">
+<div class="container mx-auto px-4 py-8" style="padding-top: 70px;">
   <!-- ユーザー情報 -->
   <div class="flex items-center mb-4">
     <% if @post.user.profile_image.present? %>
