ヘッダーとフッターのレイアウトを改善

--- a/app/views/shared/_after_header_login.html.erb
+++ b/app/views/shared/_after_header_login.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100" style="position: fixed; top: 0; right: 0; z-index: 10000;">
   <div class="flex-1">
     <%= link_to 'RunBreeze', root_path, class: "btn btn-ghost text-xl" %>
   </div>
