--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,17 +1,20 @@
-<div class="btm-nav btm-nav-lg">
+<div class="navbar bg-base-100 z-40 flex justify-between w-full" style="position: fixed; bottom: 0; left: 0; width: 100%;">
 
-  <%= link_to posts_path, class: "flex flex-col items-center btm-nav-item" do %>
-    <%= image_tag 'home_button.svg', alt: "Home", class: "h-5 w-5" %>
-    <span class="btm-nav-label">投稿一覧</span>
+  <!-- ホーム -->
+  <%= link_to posts_path, class: "flex flex-col items-center flex-1 py-1 #{current_page?(posts_path) ? 'text-primary' : 'text-gray-500'}" do %>
+    <%= image_tag 'home.svg', alt: "Home", class: "h-7 w-7 mb-1" %> 
+    <span style="font-size: 12px;">ホーム</span>
   <% end %>
 
-  <%= link_to new_post_path, class: "flex flex-col items-center btm-nav-item active" do %>
-    <%= image_tag 'create_button.svg', alt: "Create", class: "h-5 w-5" %>
-    <span class="btm-nav-label">投稿する</span>
+  <!-- ポスト -->
+  <%= link_to new_post_path, class: "flex flex-col items-center flex-1 py-1 #{current_page?(new_post_path) ? 'text-primary' : 'text-gray-500'}" do %>
+    <%= image_tag 'post.svg', alt: "Create", class: "h-10 w-10 mb-1" %> 
+    <span style="font-size: 12px;">ポスト</span> 
   <% end %>
 
-  <%= link_to edit_user_registration_path, class: "flex flex-col items-center btm-nav-item" do %>
-    <%= image_tag 'mypage_button.svg', alt: "My Page", class: "h-5 w-5" %>
-    <span class="btm-nav-label">マイページ</span>
+  <!-- マイページ -->
+  <%= link_to edit_user_registration_path, class: "flex flex-col items-center flex-1 py-1 #{current_page?(edit_user_registration_path) ? 'text-primary' : 'text-gray-500'}" do %>
+    <%= image_tag 'mypage.svg', alt: "My Page", class: "h-8 w-8 mb-1" %> 
+    <span style="font-size: 12px;">マイページ</span>
   <% end %>
 </div>
