タグの動作修正とレイアウトの調整

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,1 @@
-<%= render 'form', form_title: '新規投稿', submit_button_text: '投稿する', cancel_path: posts_path %>
+<%= render 'form', submit_button_text: '投稿する', cancel_path: posts_path %>
