--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container mx-auto px-4 py-2 bg-base-100 pb-20" style="padding-top: 70px;">
-  <h1 class="text-2xl font-bold mb-4">ブックマーク一覧</h1>
+  <h1 class="text-2xl font-bold mb-4">ブックマークした投稿</h1>
 
   <% if @posts.present? %>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 justify-items-center">
-      <%= render partial: 'bookmarks/bookmark_post', collection: @posts, as: :post %>
+      <%= render partial: 'posts/post_card', collection: @posts, as: :post %>
     </div>
   <% else %>
-    <p class="text-center text-neutral">ブックマークがありません。</p>
+    <p class="text-center text-neutral">ブックマークした投稿はありません。</p>
   <% end %>
 
   <!-- ページネーション -->
