--- a/app/views/posts/_post_card.html.erb
+++ b/app/views/posts/_post_card.html.erb
@@ -1,3 +1,5 @@
+<!-- app/views/posts/_post_card.html.erb -->
+
 <%= link_to post_path(post), class: "block" do %>
   <div class="card bg-base-100 shadow-xl flex flex-row p-4">
     <!-- 画像とカテゴリー -->
