--- a/app/views/likes/_like_buttons.html.erb
+++ b/app/views/likes/_like_buttons.html.erb
@@ -1,12 +1,14 @@
-<div class="flex items-center">
-  <% if post.liked_by?(current_user) %>
-    <!-- いいね解除ボタン -->
-    <%= render 'likes/unlike', post: post %>
-  <% else %>
-    <!-- いいね追加ボタン -->
-    <%= render 'likes/like', post: post %>
-  <% end %>
-  
-  <!-- いいね数の表示 -->
-  <span class="ml-1 text-sm text-gray-600"><%= post.likes.count %></span>
-</div>
+<turbo-frame id="like_buttons_<%= post.id %>">
+  <div class="flex items-center">
+    <% if post.liked_by?(current_user) %>
+      <!-- いいね解除ボタン -->
+      <%= render 'likes/unlike', post: post, like: current_user.likes.find_by(post: post) %>
+    <% else %>
+      <!-- いいね追加ボタン -->
+      <%= render 'likes/like', post: post %>
+    <% end %>
+    
+    <!-- いいね数の表示 -->
+    <span class="ml-1 text-sm text-gray-600"><%= post.likes.count %></span>
+  </div>
+</turbo-frame>
