--- a/app/views/likes/_unlike.html.erb
+++ b/app/views/likes/_unlike.html.erb
@@ -1,3 +1,3 @@
-<%= button_to post_like_path(post, current_user.likes.find_by(post: post)), method: :delete, class: "p-1", onclick: "event.stopPropagation();" do %>
+<%= button_to like_path(like), method: :delete, class: "p-1", data: { turbo_method: :delete }, onclick: "event.stopPropagation();" do %>
   <%= image_tag 'like_filled.svg', alt: "いいね解除", class: "h-5 w-5" %>
 <% end %>
