お問い合わせフォームへのリンクを追加

--- a/app/views/shared/_after_header_login.html.erb
+++ b/app/views/shared/_after_header_login.html.erb
@@ -17,7 +17,7 @@
         <hr>
         <li><%= link_to '利用規約', "", class: "btn btn-ghost w-full text-left" %></li>
         <li><%= link_to 'プライバシーポリシー', "", class: "btn btn-ghost w-full text-left" %></li>
-        <li><%= link_to 'お問い合わせ', "", class: "btn btn-ghost w-full text-left" %></li>
+        <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left" %></li>
         <hr>
         <li class="text-center text-xs mt-2">&copy; 2024 RunBreeze</li>
       </ul>
