トップページのレイアウト修正

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,4 @@
-<!-- Hero セクション -->
-<div class="hero bg-base-200 min-h-[20vh]" style="padding-top: 70px;">
+<div class="hero bg-base-200">
   <div class="hero-content text-center">
     <div class="max-w-md mx-auto">
       <h1 class="lg:text-5xl text-3xl font-bold">RunBreeze</h1>
