--- a/app/views/shared/_before_header_login.html.erb
+++ b/app/views/shared/_before_header_login.html.erb
@@ -1,23 +1,23 @@
-<div class="navbar bg-base-100relative" style="z-index: 1000;">
+<div class="navbar bg-base-100 relative" style="z-index: 1000;">
   <div class="flex-1">
-    <%= link_to 'RunBreeze', root_path, class: "btn btn-ghost text-xl" %>
+    <%= link_to 'RunBreeze', root_path, class: "btn btn-ghost text-xl", style: "font-style: italic; color: #37474F;" %>
   </div>
   <div class="flex-none flex items-center gap-2">
-    <%= link_to 'ログイン', new_user_session_path, class: "btn btn-ghost" %>
+    <%= link_to 'ログイン', new_user_session_path, class: "btn btn-primary text-base-100" %>
     <div class="dropdown dropdown-end">
       <label tabindex="0" class="btn btn-square btn-ghost">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-6 w-6 stroke-current">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-6 w-6 stroke-current" style="color: #37474F;">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
         </svg>
       </label>
       <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52 absolute top-full right-0 mt-2" style="z-index: 1002;">
-        <li><%= link_to '新規登録', new_user_registration_path, class: "btn btn-ghost" %></li>
+        <li><%= link_to '新規登録', new_user_registration_path, class: "btn btn-ghost", style: "color: #37474F;" %></li>
         <hr>
-        <li><%= link_to '利用規約', terms_of_service_path, class: "btn btn-ghost w-full text-left" %></li>
-        <li><%= link_to 'プライバシーポリシー', privacy_policy_path, class: "btn btn-ghost w-full text-left" %></li>
-        <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left" %></li>
+        <li><%= link_to '利用規約', terms_of_service_path, class: "btn btn-ghost w-full text-left", style: "color: #37474F;" %></li>
+        <li><%= link_to 'プライバシーポリシー', privacy_policy_path, class: "btn btn-ghost w-full text-left", style: "color: #37474F;" %></li>
+        <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left", style: "color: #37474F;" %></li>
         <hr>
-        <li class="text-center text-xs mt-2">&copy; 2024 RunBreeze</li>
+        <li class="text-center text-xs mt-2" style="color: #37474F;">&copy; 2024 RunBreeze</li>
       </ul>
     </div>
   </div>
